infrastructure/task-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  labels:
    app: task-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      name: task-service
      labels:
        app: task-service
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
              matchLabels:
                app: task-service
      containers:
        - name: task-service
          image: orthae/task-service:latest
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  labels:
    app: task-service
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001
  type: NodePort
