infrastructure/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
