infrastructure/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
#    - http:
#        paths:
#          - path: /auth/
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: task-service
#                port:
#                  number: 8081
